--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,8 +33,8 @@ section#login {
     transform: translate(-50%, -50%);
     
     background-color: white;
-    width: 300px;
-    height: 500px;
+    width: 250px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
@@ -61,5 +61,54 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    background-color: #2d6462;
+    height: 40px;
+    text-decoration: none;
+    color: #6bf7f2;
+    padding-top: 5px;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao > span{
     font-size: 0.8em;
 }
