--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,6 @@ section#login {
     top: 50%;
     left: 50%;
     overflow: hidden;
-    transform: translate(-50%, -50%);
     
     background-color: white;
     width: 250px;
@@ -38,6 +37,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -66,15 +66,39 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > span {
+    color: white;
+    /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 44.8px);
+    transform: translateY(-12px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
@@ -96,17 +120,18 @@ form > input[type=submit]:hover {
 form > a.botao {
     display: block;
     text-align: center;
-    background-color: #2d6462;
+    background-color: white;
     height: 40px;
     text-decoration: none;
-    color: #6bf7f2;
+    color: #429491;
     padding-top: 5px;
     border-radius: 5px;
     margin-top: 5px;
+    border: 1px solid #49a09d;
 }
 
 form > a.botao:hover {
-    background-color: #2d6462;
+    background-color: #2a5c5a;
 }
 
 form > a.botao > span{
