--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,25 +19,25 @@ body, html {
     width: 100vw;
 }
 
+
 main {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
     position: relative;
     height: 100vh;
     width: 100vw;
 }
 
 section#login {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     overflow: hidden;
-    
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
-    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
